normal/normal-sql/gen-src/normal/sql/NormalSQLParser.cpp

// Generated from /home/matt/Work/pushdownDB/normal/normal-sql/grammar/NormalSQL.g4 by ANTLR 4.8


#include "NormalSQLListener.h"
#include "NormalSQLVisitor.h"

#include "NormalSQLParser.h"


using namespace antlrcpp;
using namespace normal::sql;
using namespace antlr4;

NormalSQLParser::NormalSQLParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

NormalSQLParser::~NormalSQLParser() {
  delete _interpreter;
}

std::string NormalSQLParser::getGrammarFileName() const {
  return "NormalSQL.g4";
}

const std::vector<std::string>& NormalSQLParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& NormalSQLParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ParseContext ------------------------------------------------------------------

NormalSQLParser::ParseContext::ParseContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* NormalSQLParser::ParseContext::EOF() {
  return getToken(NormalSQLParser::EOF, 0);
}

std::vector<NormalSQLParser::Sql_stmt_listContext *> NormalSQLParser::ParseContext::sql_stmt_list() {
  return getRuleContexts<NormalSQLParser::Sql_stmt_listContext>();
}

NormalSQLParser::Sql_stmt_listContext* NormalSQLParser::ParseContext::sql_stmt_list(size_t i) {
  return getRuleContext<NormalSQLParser::Sql_stmt_listContext>(i);
}

std::vector<NormalSQLParser::ErrorContext *> NormalSQLParser::ParseContext::error() {
  return getRuleContexts<NormalSQLParser::ErrorContext>();
}

NormalSQLParser::ErrorContext* NormalSQLParser::ParseContext::error(size_t i) {
  return getRuleContext<NormalSQLParser::ErrorContext>(i);
}


size_t NormalSQLParser::ParseContext::getRuleIndex() const {
  return NormalSQLParser::RuleParse;
}

void NormalSQLParser::ParseContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NormalSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParse(this);
}

void NormalSQLParser::ParseContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NormalSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParse(this);
}


antlrcpp::Any NormalSQLParser::ParseContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NormalSQLVisitor*>(visitor))
    return parserVisitor->visitParse(this);
  else
    return visitor->visitChildren(this);
}

NormalSQLParser::ParseContext* NormalSQLParser::parse() {
  ParseContext *_localctx = _tracker.createInstance<ParseContext>(_ctx, getState());
  enterRule(_localctx, 0, NormalSQLParser::RuleParse);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(104);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == NormalSQLParser::SCOL || _la == NormalSQLParser::K_EXPLAIN

    || _la == NormalSQLParser::K_SELECT || ((((_la - 142) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 142)) & ((1ULL << (NormalSQLParser::K_VALUES - 142))
      | (1ULL << (NormalSQLParser::K_WITH - 142))
      | (1ULL << (NormalSQLParser::UNEXPECTED_CHAR - 142)))) != 0)) {
      setState(102);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case NormalSQLParser::SCOL:
        case NormalSQLParser::K_EXPLAIN:
        case NormalSQLParser::K_SELECT:
        case NormalSQLParser::K_VALUES:
        case NormalSQLParser::K_WITH: {
          setState(100);
          sql_stmt_list();
          break;
        }

        case NormalSQLParser::UNEXPECTED_CHAR: {
          setState(101);
          error();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(106);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(107);
    match(NormalSQLParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ErrorContext ------------------------------------------------------------------

NormalSQLParser::ErrorContext::ErrorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* NormalSQLParser::ErrorContext::UNEXPECTED_CHAR() {
  return getToken(NormalSQLParser::UNEXPECTED_CHAR, 0);
}


size_t NormalSQLParser::ErrorContext::getRuleIndex() const {
  return NormalSQLParser::RuleError;
}

void NormalSQLParser::ErrorContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NormalSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterError(this);
}

void NormalSQLParser::ErrorContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NormalSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitError(this);
}


antlrcpp::Any NormalSQLParser::ErrorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NormalSQLVisitor*>(visitor))
    return parserVisitor->visitError(this);
  else
    return visitor->visitChildren(this);
}

NormalSQLParser::ErrorContext* NormalSQLParser::error() {
  ErrorContext *_localctx = _tracker.createInstance<ErrorContext>(_ctx, getState());
  enterRule(_localctx, 2, NormalSQLParser::RuleError);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(109);
    dynamic_cast<ErrorContext *>(_localctx)->unexpected_charToken = match(NormalSQLParser::UNEXPECTED_CHAR);

         throw new RuntimeException("UNEXPECTED_CHAR=" + (dynamic_cast<ErrorContext *>(_localctx)->unexpected_charToken != nullptr ? dynamic_cast<ErrorContext *>(_localctx)->unexpected_charToken->getText() : ""));
       
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Sql_stmt_listContext ------------------------------------------------------------------

NormalSQLParser::Sql_stmt_listContext::Sql_stmt_listContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<NormalSQLParser::Sql_stmtContext *> NormalSQLParser::Sql_stmt_listContext::sql_stmt() {
  return getRuleContexts<NormalSQLParser::Sql_stmtContext>();
}

NormalSQLParser::Sql_stmtContext* NormalSQLParser::Sql_stmt_listContext::sql_stmt(size_t i) {
  return getRuleContext<NormalSQLParser::Sql_stmtContext>(i);
}

std::vector<tree::TerminalNode *> NormalSQLParser::Sql_stmt_listContext::SCOL() {
  return getTokens(NormalSQLParser::SCOL);
}

tree::TerminalNode* NormalSQLParser::Sql_stmt_listContext::SCOL(size_t i) {
  return getToken(NormalSQLParser::SCOL, i);
}


size_t NormalSQLParser::Sql_stmt_listContext::getRuleIndex() const {
  return NormalSQLParser::RuleSql_stmt_list;
}

void NormalSQLParser::Sql_stmt_listContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NormalSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSql_stmt_list(this);
}

void NormalSQLParser::Sql_stmt_listContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NormalSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSql_stmt_list(this);
}


antlrcpp::Any NormalSQLParser::Sql_stmt_listContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NormalSQLVisitor*>(visitor))
    return parserVisitor->visitSql_stmt_list(this);
  else
    return visitor->visitChildren(this);
}

NormalSQLParser::Sql_stmt_listContext* NormalSQLParser::sql_stmt_list() {
  Sql_stmt_listContext *_localctx = _tracker.createInstance<Sql_stmt_listContext>(_ctx, getState());
  enterRule(_localctx, 4, NormalSQLParser::RuleSql_stmt_list);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(115);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == NormalSQLParser::SCOL) {
      setState(112);
      match(NormalSQLParser::SCOL);
      setState(117);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(118);
    sql_stmt();
    setState(127);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(120); 
        _errHandler->sync(this);
        _la = _input->LA(1);
        do {
          setState(119);
          match(NormalSQLParser::SCOL);
          setState(122); 
          _errHandler->sync(this);
          _la = _input->LA(1);
        } while (_la == NormalSQLParser::SCOL);
        setState(124);
        sql_stmt(); 
      }
      setState(129);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    }
    setState(133);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(130);
        match(NormalSQLParser::SCOL); 
      }
      setState(135);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Sql_stmtContext ------------------------------------------------------------------

NormalSQLParser::Sql_stmtContext::Sql_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

NormalSQLParser::Compound_select_stmtContext* NormalSQLParser::Sql_stmtContext::compound_select_stmt() {
  return getRuleContext<NormalSQLParser::Compound_select_stmtContext>(0);
}

NormalSQLParser::Factored_select_stmtContext* NormalSQLParser::Sql_stmtContext::factored_select_stmt() {
  return getRuleContext<NormalSQLParser::Factored_select_stmtContext>(0);
}

NormalSQLParser::Simple_select_stmtContext* NormalSQLParser::Sql_stmtContext::simple_select_stmt() {
  return getRuleContext<NormalSQLParser::Simple_select_stmtContext>(0);
}

NormalSQLParser::Select_stmtContext* NormalSQLParser::Sql_stmtContext::select_stmt() {
  return getRuleContext<NormalSQLParser::Select_stmtContext>(0);
}

tree::TerminalNode* NormalSQLParser::Sql_stmtContext::K_EXPLAIN() {
  return getToken(NormalSQLParser::K_EXPLAIN, 0);
}

tree::TerminalNode* NormalSQLParser::Sql_stmtContext::K_QUERY() {
  return getToken(NormalSQLParser::K_QUERY, 0);
}

tree::TerminalNode* NormalSQLParser::Sql_stmtContext::K_PLAN() {
  return getToken(NormalSQLParser::K_PLAN, 0);
}


size_t NormalSQLParser::Sql_stmtContext::getRuleIndex() const {
  return NormalSQLParser::RuleSql_stmt;
}

void NormalSQLParser::Sql_stmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NormalSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSql_stmt(this);
}

void NormalSQLParser::Sql_stmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NormalSQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSql_stmt(this);
}


antlrcpp::Any NormalSQLParser::Sql_stmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NormalSQLVisitor*>(visitor))
    return parserVisitor->visitSql_stmt(this);
  else
    return visitor->visitChildren(this);
}

NormalSQLParser::Sql_stmtContext* NormalSQLParser::sql_stmt() {
  Sql_stmtContext *_localctx = _tracker.createInstance<Sql_stmtContext>(_ctx, getState());
  enterRule(_localctx, 6, NormalSQLParser::RuleSql_stmt);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(141);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == NormalSQLParser::K_EXPLAIN) {
      setState(136);
      match(NormalSQLParser::K_EXPLAIN);
      setState(139);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == NormalSQLParser::K_QUERY) {
        setState(137);
        match(NormalSQLParser::K_QUERY);
        setState(138);
        match(NormalSQLParser::K_PLAN);
      }
    }
    setState(147);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
    case 1: {
      setState(143);
      compound_select_stmt();
      break;
    }

    case 2: {
      setState(144);
      factored_select_stmt();
      break;
    }

    case 3: {
      setState(145);
      simple_select_stmt();
      break;
    }

    case 4: {
      setState(146);
      select_stmt();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Compound_select_stmtContext ------------------------------------------------------------------

NormalSQLParser::Compound_select_stmtContext::Compound_select_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<NormalSQLParser::Select_coreContext *> NormalSQLParser::Compound_select_stmtContext::select_core() {
  return getRuleContexts<NormalSQLParser::Select_coreContext>();
}

NormalSQLParser::Select_coreContext* NormalSQLParser::Compound_select_stmtContext::select_core(size_t i) {
  return getRuleContext<NormalSQLParser::Select_coreContext>(i);
}

tree::TerminalNode* NormalSQLParser::Compound_select_stmtContext::K_WITH() {
  return getToken(NormalSQLParser::K_WITH, 0);
}

std::vector<NormalSQLParser::Common_table_expressionContext *> NormalSQLParser::Compound_select_stmtContext::common_table_expression() {
  return getRuleContexts<NormalSQLParser::Common_table_expressionContext>();
}

NormalSQLParser::Common_table_expressionContext* NormalSQLParser::Compound_select_stmtContext::common_table_expression(size_t i) {
  return getRuleContext<NormalSQLParser::Common_table_expressionContext>(i);
}

tree::TerminalNode* NormalSQLParser::Compound_select_stmtContext::K_ORDER() {
  return getToken(NormalSQLParser::K_ORDER, 0);
}

tree::TerminalNode* NormalSQLParser::Compound_select_stmtContext::K_BY() {
  return getToken(NormalSQLParser::K_BY, 0);
}

std::vector<NormalSQLParser::Ordering_termContext *> NormalSQLParser::Compound_select_stmtContext::ordering_term() {
  return getRuleContexts<NormalSQLParser::Ordering_termContext>();
}

NormalSQLParser::Ordering_termContext* NormalSQLParser::Compound_select_stmtContext::ordering_term(size_t i) {
  return getRuleContext<NormalSQLParser::Ordering_termContext>(i);
}

tree::TerminalNode* NormalSQLParser::Compound_select_stmtContext::K_LIMIT() {
  return getToken(NormalSQLParser::K_LIMIT, 0);
}

std::vector<NormalSQLParser::ExprContext *> NormalSQLParser::Compound_select_stmtContext::expr() {
  return getRuleContexts<NormalSQLParser::ExprContext>();
}

NormalSQLParser::ExprContext* NormalSQLParser::Compound_select_stmtContext::expr(size_t i) {
  return getRuleContext<NormalSQLParser::ExprContext>(i);
}

std::vector<tree::TerminalNode *> NormalSQLParser::Compound_select_stmtContext::K_UNION() {
  return getTokens(NormalSQLParser::K_UNION);
}

tree::TerminalNode* NormalSQLParser::Compound_select_stmtContext::K_UNION(size_t i) {
  return getToken(NormalSQLParser::K_UNION, i);
}

std::vector<tree::TerminalNode *> NormalSQLParser::Compound_select_stmtContext::K_INTERSECT() {
  return getTokens(NormalSQLParser::K_INTERSECT);
}

tree::TerminalNode* NormalSQLParser::Compound_select_stmtContext::K_INTERSECT(size_t i) {
  return getToken(NormalSQLParser::K_INTERSECT, i);
}

std::vector<tree::TerminalNode *> NormalSQLParser::Compound_select_stmtContext::K_EXCEPT() {
  return getTokens(NormalSQLParser::K_EXCEPT);
}

tree::TerminalNode* NormalSQLParser::Compound_select_stmtContext::K_EXCEPT(size_t i) {
  return getToken(NormalSQLParser::K_EXCEPT, i);
}
